# kraivor

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml
.keys/: jwt-private.pem  jwt-public.pem
docs/: CI-MIGRATION-FIXES.md  CI-VS-DOCKER.md  DOCKER.md  KRV-011.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(marketing)/: page.tsx
frontend/src/components/: error-boundary.tsx  loading.tsx  not-found.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/config/: index.ts
frontend/src/constants/: index.ts
frontend/src/lib/: api.ts  auth.ts  socket.ts
frontend/src/lib/api/: ai-api.ts  analysis-api.ts  auth-api.ts  client.ts  error-handler.ts  index.ts  notes-api.ts  projects-api.ts  workspace-api.ts
frontend/src/lib/hooks/: index.ts  use-api.ts  use-auth.ts  use-channel.ts  use-protected-route.ts  use-ui.ts  use-workspace.ts
frontend/src/lib/providers/: auth-provider.tsx  index.ts  query-provider.tsx
frontend/src/lib/stores/: auth-store.ts  index.ts  ui-store.ts  workspace-store.ts
frontend/src/lib/utils/: index.ts
frontend/src/styles/: globals.css
frontend/src/types/api/: index.ts
frontend/src/types/auth/: index.ts
frontend/src/types/domain/: ai.ts  analysis.ts  (+2 more)
infra/docker/nginx/: nginx.dev.conf
infra/docker/postgres/: init.sql
infra/kubernetes/: namespace.yaml
infra/kubernetes/infrastructure/: ingress.yaml
postman/: Kraivor Auth Service.postman_collection.json  Kraivor Auth Service.postman_environment.json
services/ai/: Dockerfile  pyproject.toml  pytest.ini
services/ai/app/: config.py
services/ai/app/dependencies/: auth.py
services/ai/tests/: test_auth.py
services/analysis/: Dockerfile  pyproject.toml
services/analysis/tests/: test_auth.py
services/auth/: .dockerignore  Dockerfile  Dockerfile.dev  conftest.py  entrypoint.dev.sh  manage.py  pyproject.toml  pytest.ini  run_tests.py
services/auth/.keys/: jwt-private.pem  jwt-public.pem
services/auth/apps/api_keys/: apps.py  models.py  urls.py
services/auth/apps/api_keys/migrations/: 0001_initial.py
services/auth/apps/authentication/: README.md  __init__.py  cookie_utils.py  jwks.py  jwt.py  models.py  otp.py  security.py  serializers.py  tokens.py  urls.py  views.py
services/auth/apps/authentication/migrations/: 0001_initial.py  0002_refreshtoken_auth_refres_user_id_c0d4c2_idx.py
services/auth/apps/authentication/oauth/: __init__.py  encryption.py  github.py  state_manager.py  views.py
services/auth/apps/authentication/services/: user_service.py
services/auth/apps/users/: email_service.py  models.py  rate_limiter.py  serializers.py  urls.py  verification.py  views.py
services/auth/apps/users/migrations/: 0001_initial.py  0002_remove_email_verification_token_fields.py
services/auth/auth/: urls.py  wsgi.py
services/auth/auth/settings/: base.py  development.py  production.py  staging.py  test.py
services/auth/requirements/: base.txt
services/auth/tests/: factories.py  test_email_verification.py  test_github_oauth.py  test_jwks.py  test_refresh_token.py  test_signin.py  test_signout_sessions.py  test_signup.py
services/core/: Dockerfile  pyproject.toml
services/core/core/: wsgi.py
services/core/core/settings/: base.py  test.py
services/core/middleware/: jwt_auth.py
services/core/tests/: test_jwt_middleware.py
services/identity/: Dockerfile.dev
services/notifications/: Dockerfile
services/realtime/: Dockerfile
(+37 files in other folders)
