[project]
name = "auth"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "celery>=5.3",
    "djangorestframework-simplejwt>=5.3",
    "social-auth-app-django>=5.0",
    "argon2-cffi>=25.1.0",
    "django-environ>=0.13.0",
    "pyjwt>=2.8",           # KRV-010: signed JWT for email verification tokens
    "cryptography>=41.0",    # KRV-012: RSA key parsing for JWKS endpoint
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
