[project]
name = "auth"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.0",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "celery>=5.3",
    "djangorestframework-simplejwt>=5.3",
    "social-auth-app-django>=5.0",
    "argon2-cffi>=25.1.0",
    "django-environ>=0.13.0",
    "pyjwt>=2.8",
    "cryptography>=41.0",
    "dj-database-url>=3.1.2",
]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.1",
    "pytest-sugar>=1.1",
    "rich>=13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "auth.settings.test"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["apps"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/admin.py",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "pytest-sugar>=1.1.1",
    "rich>=15.0.0",
    "ruff>=0.15.12",
]
